--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,71 @@
-a
+html,body, #container {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+hr {
+		margin: 20px 0 20px 0 ;
+}
+
+#map { 
+			bottom: 0px;
+			height: 95%;
+			left: 22%;
+			position: absolute;
+			right: 0px;
+}
+
+#search-input-box {
+
+			background: #87AFC7;
+			height: 95%;
+			padding: 10px 10px 30px 10px;
+			text-align: left;
+			width: 21%;
+}
+.nav-bar {
+			height: 5%;
+			background: #00003f ;
+}				
+#search-text {
+			width: 98%;
+			height: 5%;
+}
+
+.place-list {
+    margin: 10px;
+    padding: 10px 0 0 10px;
+    list-style: none;
+}
+
+@media only screen and (max-width:450px) {
+
+#search-text, .list-item {
+		font-size: 1.2em;
+}
+#container {
+	
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+#search-input-box {
+	
+	width: 50%;
+	
+}
+#map {
+	left:55%;
+	width: 50%;
+	height: 100%;	
+}
+
+.place-list {
+	    
+		margin: 0px;
+		padding: 10px 0;
+
+}
+}
